--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.14",
-        "axios": "^1.1.2",
+        "axios": "^1.5.1",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.24",
         "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^4.4.0",
+        "vue": "^3.3.4",
+        "vue-router": "^4.2.5"
     }
 }
